--- a/Otros_css_js/Menu.css
+++ b/Otros_css_js/Menu.css
@@ -1,5 +1,143 @@
 ﻿/*http://twitterbootstrap3navbars.w3masters.nl*/
 .navbar-custom {
+    background-color: #DC3D31;
+    border-color: #ce2c2c;
+    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#e06e6e), to(#DC3D31));
+    background-image: -webkit-linear-gradient(top, #e06e6e, 0%, #DC3D31, 100%);
+    background-image: -moz-linear-gradient(top, #e06e6e 0%, #DC3D31 100%);
+    background-image: linear-gradient(to bottom, #e06e6e 0%, #DC3D31 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe06e6e', endColorstr='#DC3D31', GradientType=0);
+}
+
+    .navbar-custom .navbar-brand {
+        color: #f6f6f6;
+    }
+
+        .navbar-custom .navbar-brand:hover,
+        .navbar-custom .navbar-brand:focus {
+            color: #dddddd;
+            background-color: transparent;
+        }
+
+    .navbar-custom .navbar-text {
+        color: #f6f6f6;
+    }
+
+    .navbar-custom .navbar-nav > li:last-child > a {
+        border-right: 1px solid #ce2c2c;
+    }
+
+    .navbar-custom .navbar-nav > li > a {
+        color: #f6f6f6;
+        border-left: 1px solid #ce2c2c;
+    }
+
+        .navbar-custom .navbar-nav > li > a:hover,
+        .navbar-custom .navbar-nav > li > a:focus {
+            color: #c0c0c0;
+            background-color: transparent;
+        }
+
+    .navbar-custom .navbar-nav > .active > a,
+    .navbar-custom .navbar-nav > .active > a:hover,
+    .navbar-custom .navbar-nav > .active > a:focus {
+        color: #c0c0c0;
+        background-color: #ce2c2c;
+        background-image: -webkit-gradient(linear, left 0%, left 100%, from(#ce2c2c), to(#da5353));
+        background-image: -webkit-linear-gradient(top, #ce2c2c, 0%, #da5353, 100%);
+        background-image: -moz-linear-gradient(top, #ce2c2c 0%, #da5353 100%);
+        background-image: linear-gradient(to bottom, #ce2c2c 0%, #da5353 100%);
+        background-repeat: repeat-x;
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffce2c2c', endColorstr='#ffda5353', GradientType=0);
+    }
+
+    .navbar-custom .navbar-nav > .disabled > a,
+    .navbar-custom .navbar-nav > .disabled > a:hover,
+    .navbar-custom .navbar-nav > .disabled > a:focus {
+        color: #cccccc;
+        background-color: transparent;
+    }
+
+    .navbar-custom .navbar-toggle {
+        border-color: #dddddd;
+    }
+
+        .navbar-custom .navbar-toggle:hover,
+        .navbar-custom .navbar-toggle:focus {
+            background-color: #dddddd;
+        }
+
+        .navbar-custom .navbar-toggle .icon-bar {
+            background-color: #cccccc;
+        }
+
+    .navbar-custom .navbar-collapse,
+    .navbar-custom .navbar-form {
+        border-color: #cc2c2c;
+    }
+
+    .navbar-custom .navbar-nav > .dropdown > a:hover .caret,
+    .navbar-custom .navbar-nav > .dropdown > a:focus .caret {
+        border-top-color: #c0c0c0;
+        border-bottom-color: #c0c0c0;
+    }
+
+    .navbar-custom .navbar-nav > .open > a,
+    .navbar-custom .navbar-nav > .open > a:hover,
+    .navbar-custom .navbar-nav > .open > a:focus {
+        background-color: #ce2c2c;
+        color: #c0c0c0;
+    }
+
+        .navbar-custom .navbar-nav > .open > a .caret,
+        .navbar-custom .navbar-nav > .open > a:hover .caret,
+        .navbar-custom .navbar-nav > .open > a:focus .caret {
+            border-top-color: #c0c0c0;
+            border-bottom-color: #c0c0c0;
+        }
+
+    .navbar-custom .navbar-nav > .dropdown > a .caret {
+        border-top-color: #f6f6f6;
+        border-bottom-color: #f6f6f6;
+    }
+
+@media (max-width: 767) {
+    .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
+        color: #f6f6f6;
+    }
+
+        .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
+        .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
+            color: #c0c0c0;
+            background-color: transparent;
+        }
+
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
+        color: #c0c0c0;
+        background-color: #ce2c2c;
+    }
+
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+        color: #cccccc;
+        background-color: transparent;
+    }
+}
+
+.navbar-custom .navbar-link {
+    color: #f6f6f6;
+}
+
+    .navbar-custom .navbar-link:hover {
+        color: #c0c0c0;
+    }
+
+/*AZUL*/
+/*.navbar-custom {
   background-color: #376d98;
   border-color: #2e5c80;
   background-image: -webkit-gradient(linear, left 0%, left 100%, from(#4688bc), to(#376d98));
@@ -7,7 +145,8 @@
   background-image: -moz-linear-gradient(top, #4688bc 0%, #376d98 100%);
   background-image: linear-gradient(to bottom, #4688bc 0%, #376d98 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4688bc', 
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4688bc', 
+
 endColorstr='#ff376d98', GradientType=0);
 }
 .navbar-custom .navbar-brand {
@@ -43,7 +182,8 @@ endColorstr='#ff376d98', GradientType=0);
   background-image: -moz-linear-gradient(top, #2e5c80 0%, #3c76a5 100%);
   background-image: linear-gradient(to bottom, #2e5c80 0%, #3c76a5 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2e5c80', 
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2e5c80', 
+
 endColorstr='#ff3c76a5', GradientType=0);
 }
 .navbar-custom .navbar-nav > .disabled > a,
@@ -114,4 +254,4 @@ endColorstr='#ff3c76a5', GradientType=0);
 }
 .navbar-custom .navbar-link:hover {
   color: #c0c0c0;
-}
+}*/
